--- a/面试知识点概要.md
+++ b/面试知识点概要.md
@@ -43,3 +43,37 @@ unsafe.compareAndSwapInt(this,valueOffSet,expect,update);
 >   如线程1从内存X中取出A，这时候另一个线程2也从内存X中取出A，并且线程2进行了一些操作将内存X中的值变成了B，然后线程2又将内存X中的数据变成A，这时候线程1进行CAS操作发现内存X中仍然是A，然后线程1操作成功。虽然线程1的CAS操作成功，但是整个过程就是有问题的。比如链表的头在变化了两次后恢复了原值，但是不代表链表就没有变化。  所以JAVA中提供了AtomicStampedReference/AtomicMarkableReference来处理会发生ABA问题的场景，主要是在对象中额外再增加一个标记来标识对象是否有过变更
 
 ### 5 介绍下AQS的实现原理
+
+​	AQS,抽象队列并发器（AbstractQueuedSynchronizer）.提供了一种阻塞锁和一系列依赖FIFO等待队列的同步框架。而我们自己在实现锁的时候，只需要关注状态值state的释放或者获取即可。
+
+### 6 公平锁和非公平锁的区别
+
+​	1 非公平锁在调用一次lock()方法的时候，首先会尝试一次CAS。如果CAS成功，那么就会获取到锁。
+
+​	2 如果第一次CAS失败，那么会进入到tryAcquire()方法，查看状态值state,如果state=0,那么此时会直接CAS去获取锁。否则和公平锁一样，加入到等待队列。直到被前驱节点唤醒。
+
+## 二 集合容器
+
+#### 1 currentHashMap在1.7和1.8之后的区别是什么
+
+数据结构（和HashMap相同）
+
+当链表的长度大于8的时候，此时链表转换为红黑树（泊松分布----哈希碰撞）
+
+​	1.7 链表+数组
+
+​	1.8 链表+数组+红黑树
+
+#### 2 遍历Map的四种方式
+
+​	1 for循环 map.entrySet
+
+​	2 forech  遍历map.keySe()t以及map.values()
+
+​	3 迭代器 map.entrySet().iterator();
+
+​	4 通过键寻找值 map.keySet()  map.get(key)
+
+#### 3  HashMap如何解决hash碰撞的
+
+​	解决hash碰撞的方式有
